Fix the index on mobile

--- a/core/static/core/core.css
+++ b/core/static/core/core.css
@@ -65,3 +65,9 @@
     text-decoration: 0;
     color: black;
 }
+
+@media screen and (max-width: 25rem) {
+    .app-button-container {
+        grid-template-columns: 1fr;
+    }
+}
